@@ -1526,6 +1526,14 @@ ruby_vmptr_destruct(rb_vm_t *vm)
 
     if (th && vm == th->vm) {
 	if (vm->self) {
+            /* at_exit functions called here; any other place more
+             * apropriate for this purpose? let me know if any. */
+            int i;
+            VALUE ary = (VALUE)&vm->at_exit;
+            for (i=0; i<RARRAY_LEN(ary); i++) {
+                ((void(*)(rb_vm_t*))RARRAY_PTR(ary)[i])(vm);
+            }
+            rb_ary_clear(ary);
 	    vm->self = 0;
 	}
 	else {
@@ -1615,6 +1623,8 @@ vm_init2(rb_vm_t *vm)
     vm->cache = rb_objspace_xmalloc2(vm->objspace, CACHE_SIZE, sizeof(struct cache_entry));
     vm->living_threads = st_init_numtable();
     MEMZERO(vm->cache, struct cache_entry, CACHE_SIZE);
+    vm->at_exit.basic.flags = (T_ARRAY | RARRAY_EMBED_FLAG) & ~RARRAY_EMBED_LEN_MASK; /* len set 0 */
+    vm->at_exit.basic.klass = 0;
 }
 
 /* Thread */
